--- a/GunGame.csproj
+++ b/GunGame.csproj
@@ -26,6 +26,10 @@
     <Reference Include="I18N.West">
       <HintPath>lib\I18N.West.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.3.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>lib\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="Assembly-CSharp">
       <HintPath>lib\Assembly-CSharp.dll</HintPath>
@@ -50,9 +54,6 @@
     <Reference Include="UnityEngine">
       <HintPath>lib\UnityEngine.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="MySql.Data">
-      <HintPath>lib\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System.Data">
       <HintPath>lib\System.Data.dll</HintPath>
