--- a/GunGame.csproj
+++ b/GunGame.csproj
@@ -20,17 +20,30 @@
     <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Transactions" />
+    <Reference Include="System.Runtime.Serialization">
+      <HintPath>Libraries\System.Runtime.Serialization.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="I18N">
-      <HintPath>lib\I18N.dll</HintPath>
+      <HintPath>Libraries\I18N.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="I18N.West">
-      <HintPath>lib\I18N.West.dll</HintPath>
+      <HintPath>Libraries\I18N.West.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.3.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>lib\MySql.Data.dll</HintPath>
+    <Reference Include="MySql.Data">
+      <HintPath>Libraries\MySql.Data.dll</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Libraries\Newtonsoft.Json.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>lib\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -51,24 +64,15 @@
       <HintPath>lib\Rocket.Unturned.dll</HintPath>
       <Private>False</Private>
     </Reference>
-	<Reference Include="System.Management">
-	  <HintPath>lib\System.Management.dll</HintPath>
-	</Reference>
-	<Reference Include="System.Transactions">
-	  <HintPath>lib\System.Transactions.dll</HintPath>
-	</Reference>
     <Reference Include="UnityEngine">
       <HintPath>lib\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.Data">
-      <HintPath>lib\System.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GunGame\API\IEconomyHook.cs" />
+    <Compile Include="GunGame\Economy\Hooks.cs" />
+    <Compile Include="GunGame\Managers\EconomyManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GunGame\GunGame.cs" />
     <Compile Include="GunGame\GunGamePlayerComponent.cs" />
@@ -81,7 +85,29 @@
     <Compile Include="GunGame\API\Extensions.cs" />
     <Compile Include="GunGame\GunGameConfig.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Libraries\I18N.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\I18N.West.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\MySql.Data.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\System.Data.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\System.Management.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\System.Transactions.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Libraries\System.Runtime.Serialization.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <MonoDevelop>
